RbA Build/src/objects/rSuite_Holidays__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclude_Day_from_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude the day from calculation of number of business days given to the customer for a cancellation date.</description>
        <inlineHelpText>Exclude the day from calculation of number of business days given to the customer for a cancellation date.</inlineHelpText>
        <label>Exclude Day from Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holiday__c</fullName>
        <label>Holiday</label>
        <picklist>
            <picklistValues>
                <fullName>New Year’s Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday of Martin Luther King Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington’s Birthday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memorial Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independence Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labor Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Columbus Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thanksgiving Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christmas Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rSuite_Configuration__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>rSuite Configuration</label>
        <referenceTo>rSuite_Configuration__c</referenceTo>
        <relationshipLabel>rSuite Holidays</relationshipLabel>
        <relationshipName>rSuite_Holidays</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>rSuite Holidays</label>
    <nameField>
        <label>rSuite Holidays Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>rSuite Holidays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>